# TypeDeductionAnalysis

./: .gitignore  CMakeLists.txt  StructPaddingInfo.hpp  TransparentType.cpp  TransparentType.hpp  TypeDeductionAnalysis.cpp  TypeDeductionAnalysis.hpp  TypeDeductionAnalysisInfo.cpp  readme.md
Containers/: InsertionOrderedMap.hpp
Debug/: Logger.cpp  Logger.hpp
Utils/: PrintUtils.hpp
docs/: index.html
src/: DeductionFunctions.cpp  PassPluginInfo.cpp  StructPaddingInfo.cpp  TransparentType.cpp  TransparentType.hpp  TypeDeductionAnalysis.cpp  TypeDeductionAnalysis.hpp  TypeDeductionAnalysisInfo.cpp  TypeDeductionAnalysisInfo.hpp
src/TDAInfo/: DebugInfoParser.cpp  TBAAParser.cpp
test/: test-runner.py
test/ABSURD/: run.py  stats.csv  statsO0.csv  statsO3.csv
test/axbench/: run.py  statsO0.csv  statsO3.csv
test/gnu_coreutils/O0/: basename.ll  chmod.ll  chroot.ll  cksum_avx2.ll  dircolors.ll  echo.ll  false.ll  find.ll  force.ll  groups.ll  hostid.ll  id.ll  iopoll.ll  mknod.ll  nice.ll  printenv.ll  printf.ll  readlink.ll  realpath.ll  remove.ll  runcon.ll  show.ll  shuf.ll  sleep.ll  stats.csv  tee.ll  temp.ll  true.ll  truncate.ll  tsort.ll  uname.ll  uniq.ll  wc.ll  who.ll  whoami.ll
test/gnu_coreutils/O0/cat/: cat.ll
test/gnu_coreutils/O0/cksum_avx512/: cksum_avx512.ll
test/gnu_coreutils/O0/cksum_pclmul/: cksum_pclmul.ll
test/gnu_coreutils/O0/copy/: copy.ll
test/gnu_coreutils/O0/crctab/: crctab.ll
test/gnu_coreutils/O3/: basename.ll  chmod.ll  cksum_pclmul.ll  dirname.ll  echo.ll  env.ll  expr.ll  fold.ll  getlimits.ll  hostid.ll  libstdbuf.ll  link.ll  make.ll  operand2sig.ll  pathchk.ll  pinky.ll  printenv.ll  prog.ll  realpath.ll  remove.ll  rmdir.ll  run.py  set.ll  sleep.ll  stty.ll  tac.ll  tee.ll  temp.ll  test.ll  tty.ll  uniq.ll  users.ll  who.ll
test/polybench/: run.py  stats.csv  statsO0.csv  statsO3.csv
(+109 files in other folders)
